completando la api
